[package]
name = "tunnel-examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
authors = ["Mitul Shah <hello@ferrolabs.ai>"]
license = "MIT OR Apache-2.0"
publish = false
description = "Examples for the FerroTunnel library"
repository = "https://github.com/ferro-labs/tunnel-examples"

# This crate exists only to provide examples
[lib]
path = "lib.rs"

# ============================================================================
# Basic Examples - Getting started with FerroTunnel
# ============================================================================

[[example]]
name = "embedded_server"
path = "basic/embedded_server.rs"

[[example]]
name = "embedded_client"
path = "basic/embedded_client.rs"

[[example]]
name = "auto_reconnect"
path = "basic/auto_reconnect.rs"

# Plugin Examples
[[example]]
name = "custom_plugin"
path = "plugins/custom_plugin.rs"

[[example]]
name = "header_filter"
path = "plugins/header_filter.rs"

[[example]]
name = "ip_blocklist"
path = "plugins/ip_blocklist.rs"

[[example]]
name = "plugin_chain"
path = "plugins/plugin_chain.rs"

# Advanced Examples
[[example]]
name = "tls_config"
path = "advanced/tls_config.rs"

[[example]]
name = "multi_tunnel"
path = "advanced/multi_tunnel.rs"

[[example]]
name = "http2_connection_pooling"
path = "advanced/http2_connection_pooling.rs"

[[example]]
name = "custom_pool_config"
path = "advanced/custom_pool_config.rs"

# ============================================================================
# Operational Examples - Server lifecycle and observability
# ============================================================================

[[example]]
name = "server_graceful_shutdown"
path = "operational/server_graceful_shutdown.rs"

[[example]]
name = "server_observability"
path = "operational/server_observability.rs"

# ============================================================================
# Scenario Examples - Common usage scenarios
# ============================================================================

[[example]]
name = "expose_local_dev"
path = "scenarios/expose_local_dev.rs"

[[example]]
name = "receive_webhooks_locally"
path = "scenarios/receive_webhooks_locally.rs"

[[example]]
name = "websocket_tunnel"
path = "scenarios/websocket_tunnel.rs"

[dependencies]
# Core ferrotunnel library
ferrotunnel = "1.0.6"

# HTTP library (for connection pooling examples)
ferrotunnel-http = "1.0.6"

# Plugin system (for plugin examples)
ferrotunnel-plugin = "1.0.6"

# HTTP types (for plugin examples)
http = "1.4.0"

# Async trait (for Plugin implementations)
async-trait = "0.1"

# Runtime and logging
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket dependencies for examples
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Using custom lints for examples - allow unwrap/expect for demonstration code
[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
single_match_else = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
needless_continue = "allow"
ignored_unit_patterns = "allow"
unnecessary_literal_bound = "allow"
module_name_repetitions = "allow"
needless_borrows_for_generic_args = "allow"
# Allow unwrap/expect in examples for clarity
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
